[package]
name = "pulsar-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Pulsar wire protocol — shared by the relay server and the desktop app."

[dependencies]
serde.workspace = true
bincode.workspace = true
rand.workspace = true
