# Pulsar wire protocol — standalone crate.
#
# Extracted from the Pulsar monorepo. Shared by the relay server
# (github.com/PulsarDesk/relay) and the app (github.com/PulsarDesk/pulsar),
# which consume it as a git dependency. This file is both the workspace root
# and the package so the `*.workspace = true` inheritance keeps working.
[workspace]
resolver = "2"

[workspace.package]
version = "0.1.0-dev.27"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Pulsar contributors"]
rust-version = "1.85"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
rand = "0.8"

[package]
name = "pulsar-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Pulsar wire protocol — shared by the relay server and the desktop app."

[dependencies]
serde.workspace = true
bincode.workspace = true
rand.workspace = true
